[CBR-213] introduce 'Trace.Named'
Signed-off-by: Alexander Diemand <codieplusplus@apax.net>

--- a/util/cardano-sl-util.cabal
+++ b/util/cardano-sl-util.cabal
@@ -47,6 +47,8 @@ library
                        Pos.Util.Some
                        Pos.Util.Timer
                        Pos.Util.Trace
+                       Pos.Util.Trace.Unstructured
+                       Pos.Util.Trace.Named
                        Pos.Util.Util
                        Pos.Util.Wlog
 
@@ -146,6 +148,7 @@ test-suite test
                        Test.Pos.Util.ModifierSpec
                        Test.Pos.Util.QuickCheck.Property
                        Test.Pos.Util.TimerSpec
+                       Test.Pos.Util.TraceSpec
                        Test.Pos.Util.Tripping
 
   build-depends:       aeson
